[gd_scene load_steps=11 format=2]

[ext_resource path="res://Robot/PNG/Poses/character_robot_idle.png" type="Texture" id=1]
[ext_resource path="res://arrow_body.png" type="Texture" id=2]
[ext_resource path="res://Robot/PNG/Poses/character_robot_run2.png" type="Texture" id=3]
[ext_resource path="res://Robot/PNG/Poses/character_robot_run1.png" type="Texture" id=4]
[ext_resource path="res://Robot/PNG/Poses/character_robot_fall.png" type="Texture" id=5]
[ext_resource path="res://Robot/PNG/Poses/character_robot_run0.png" type="Texture" id=6]
[ext_resource path="res://Robot/PNG/Poses/character_robot_jump.png" type="Texture" id=7]
[ext_resource path="res://Characters/Character/Character.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "fall",
"speed": 0.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "jump",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.55065, 13.6003 )

[node name="Player" type="KinematicBody2D" groups=[
"Jugador",
]]
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.0409164, -0.25226 )
scale = Vector2( 0.261794, 0.261794 )
frames = SubResource( 1 )
animation = "run"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.198652, 3.29777 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="Arrow" type="NinePatchRect" parent="."]
margin_left = 1.03322
margin_top = 0.440845
margin_right = 26.0332
margin_bottom = 5.44084
rect_rotation = -7.7
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 5 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 3, 3 )
patch_margin_left = 7
patch_margin_right = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball" type="Position2D" parent="."]
position = Vector2( -7, 12 )

[node name="Dash Cooldown" type="Timer" parent="."]
wait_time = 0.657
one_shot = true

[node name="Dash Time" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="New jump threshold" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Minimun jump duration" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
[connection signal="timeout" from="Dash Cooldown" to="." method="_on_Dash_Cooldown_timeout"]
[connection signal="timeout" from="Dash Time" to="." method="_on_Dash_Time_timeout"]
[connection signal="timeout" from="New jump threshold" to="." method="_on_New_jump_threshold_timeout"]
[connection signal="timeout" from="Minimun jump duration" to="." method="_on_Minimun_jump_duration_timeout"]
